# masters-thesis

./: README.md
impl_java/: Main.java  test_results_12_workers_200ms.txt  test_results_1_workers_200ms.txt
impl_java/fol/: Language.java  Substitution.java  Unifier.java
impl_java/fol/formula/: And.java  Equals.java  Exists.java  (+5 more)
impl_java/modelGeneration/: Heuristics.java  Salient.java
impl_java/ontology/: Data.java  ParsedSentence.java  Stories.java
python_port/: .gitignore  README.md  annotated_test_results.txt  demo.py  fix.py  main.py  pyproject.toml  splitter.py
python_port/data/: extra_test.json  java_design_test.json  test copy.json  test.json  train copy.json  train.json  val copy.json  val.json
python_port/scripts/: build_literal_datasets.sh  plot_literal_metrics.py  plot_policy_metrics.py  prepare_data.sh  run_all_experiments.sh  run_literal_seq2seq.sh  run_policy_experiments.sh  sanity_check_search.py  train_models.sh
python_port/src/nls_python/: typing_utils.py
python_port/src/nls_python/fol/: __init__.py  substitution.py  unification.py  utils.py
python_port/src/nls_python/fol/formula/: __init__.py  equals.py  exists.py  fand.py  fnot.py  formula.py  logical_constants.py  p_form.py
python_port/src/nls_python/fol/term/: __init__.py  constant.py  f_term.py  skolem_function.py  term.py  variable.py
python_port/src/nls_python/model_generation/: __init__.py  annotated_dataset.py  annotated_story_experiments.py  consistency.py  heuristics.py  literal_seq2seq.py  narratives.py  neural.py  neural_evaluation.py  neural_training.py  policies.py  policy_experiments.py  rules.py  salient.py  story_bank.py  story_experiments.py  story_ordering.py  story_rankers.py  story_replayer.py  story_semantics.py  tableau_model.py  training_data.py  training_pipeline.py
python_port/src/nls_python/model_generation/generators/: base.py  priority.py
python_port/src/nls_python/model_generation/inference_rules/: __init__.py  and_elim.py  base.py  eq_elim.py  exist_elim.py  forall_elim.py  not_elim.py  or_elim.py
python_port/src/nls_python/model_generation/story/: __init__.py  bank.py  dataset.py  ordering.py  rankers.py  replayer.py  semantics.py
thesis/: .gitignore
thesis/src/: abbreviations.tex  abstract.tex  literature.bib  thesis.tex
(+35 files in other folders)
